# twip

./: .gitignore  README.md  pyproject.toml
doc/: README.md  roadmap.md  uniform_zebra.md
doc/decided/: behavior_composition.md  behavior_dispatch.md  containers_and_connectors.md  entity_identity.md  extensions.md  model.md  scope_and_vision.md  sidedness.md  style.md  test_strategy.md
example/: prototype.py
src/twip/: __init__.py  action.py  component.py  context.py  dir.py  direction.py  dispatcher.py  entity.py  extension_loader.py  extensions.py  language.py  parser.py  play.py  result.py  verb.py  world.py
src/twip_ext/: blindered.py  (+5 more)
test/: assertions.py  conftest.py  helpers.py  meta_script.txt  scenario.py  test parser_shape.py  test-verb_policy.py  test_breakable.py  test_close_door.py  test_component_dispatch.py  test_connector.py  test_drinkable.py  test_eatable.py  test_entity_behavior_registration.py  test_extension_boundary.py  test_extension_loader.py  test_extension_loader_multiple.py  test_extension_loading_fails.py  test_extension_not_callable.py  test_extension_registration.py  test_extensions.py  test_extensions_owns_pushable.py  test_helpers.py  test_language.py  test_language_not_seen.py  test_listenable.py  test_lockable.py  test_look_throughable.py  test_lookable.py  test_movable.py  test_open_door.py  test_openable.py  test_openable_lockable.py  test_openable_multiple_door.py  test_parser_aliasing.py  test_parser_direction.py  test_parser_if_phrasing.py  test_parser_prepositions.py  test_parser_semantic_boundary.py  test_parser_shape.py  (+37 more)
(+72 files in other folders)
