[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twip"
version = "0.0.1"
description = "Parser-first deterministic world simulation engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest"
]

[tool.pytest.ini_options]
testpaths = ["test"]